--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name": "wp-kit/vc-integration",
-	"description": "A Wordpress PHP Component that handles Visual Composer Configuration",
+	"description": "A wp-kit component that handles Visual Composer configuration",
 	"keywords": ["wordpress", "themosis", "oop", "visual composer"],
 	"homepage" : "https://github.com/wp-kit/vc-integration",
 	"license": "MIT",
