--- a/composer.json
+++ b/composer.json
@@ -14,21 +14,14 @@
 	],
 	"require": {
         "php": ">=5.6.4",
-        "wp-kit/integrations": "dev-master",
-	"wp-kit/shortcodes": "dev-master",
-	"wp-kit/utils": "dev-master"
+        "wp-kit/integrations": "2.*",
+	"wp-kit/shortcodes": "2.*",
+	"wp-kit/utils": "2.*"
     },
 	"type": "library",
 	"autoload": {
         "psr-4": {
             "WPKit\\Integrations\\Vc\\": "src/Vc" 
         }
-    },
-    "config": {
-		"preferred-install": "dist"
-	},
-	"repositories": [
-	],
-	"scripts": {
-	}
+    }
 }
